<resources>
    <string name="app_store_name">QuickSale</string>
    <string name="app_name">QS-Admin</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="order">Order</string>
    <string name="taken">Taken</string>
    <string name="returns">Return</string>
    <string name="sales">Sales</string>
    <string name="resources">Resources</string>
    <string name="sales_man">Sales Man</string>
    <string name="items_set_up">Items set-up</string>
    <string name="date">Date</string>
    <string name="submit">SUBMIT</string>
    <string name="party_name">Party Name</string>
    <string name="gst_in">Gst-In</string>
    <string name="address">Address</string>
    <string name="route">Route</string>
    <string name="customer">Customer</string>
    <string name="create">Create</string>
    <string name="sales_store">Sales (store)</string>
    <string name="sales_deprecated">Sales - deprecated</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="nil">NIL</string>
    <string name="loading">Loading…</string>
    <string name="result">Result</string>
    <string name="dateformat">dd-MM-yyyy</string>
</resources>
