<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="marmu.com.quicksale.activity.SetTakenActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_taken_set">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sales_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:onClick="salesManClick"
                android:padding="16dp"
                android:text="@string/sales_man"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sales_man"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_down"
                android:tag="add" />

            <TextView
                android:id="@+id/sales_man_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sales_man"
                android:layout_margin="8dp"
                android:background="@drawable/box_white"
                android:orientation="horizontal"
                android:padding="16dp"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_route_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sales_man_list"
                android:padding="16dp">

                <EditText
                    android:id="@+id/et_route_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:hint="@string/route"
                    android:inputType="textAutoComplete"
                    android:padding="8dp"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </android.support.design.widget.TextInputLayout>

            <TableRow
                android:id="@+id/tr_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/til_route_name"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="Product"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="QTY"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorWhite" />

            </TableRow>

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tr_header" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_taken_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_primary"
        android:onClick="setTaken"
        android:text="@string/submit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorLightWhite" />

</RelativeLayout>
